Harden two factor auth flow
